--- a/README.rdoc
+++ b/README.rdoc
@@ -6,6 +6,8 @@ with different formats, localized text, custom colors, etc.
 and be able to create beautiful pdfs to use on Ilustrator,
 Coreldraw, Photoshop or where you need it
 -----------------------------------------------------------
+[![Build Status](https://api.shippable.com/projects/54fedaf45ab6cc135296cb36/badge?branchName=develop)](https://app.shippable.com/projects/54fedaf45ab6cc135296cb36/builds/latest)
+
 == Installation
     bundle install
 
